# 2020-FreestandingRustBinary

./: README.md
rust_freestand/: Cargo.toml
