[package]
name = "rust_freestand"
version = "0.1.0"
authors = ["Mark Richey <mkrichey@gmail.com>"]
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic